app/css/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer components {
  .markdown {
    @apply text-gray-800 flex flex-col w-full items-start justify-start text-justify 
  }

  .markdown h3 {
    @apply text-2xl text-left mt-8
  }

  .markdown h4 {
    @apply text-xl text-left mt-4
  }

  .markdown p {
    @apply text-sm text-justify mt-2
  }

  .markdown li {
    @apply text-sm text-justify mt-2 md:ml-2 ml-1
  }

  .markdown ol {
    @apply text-sm text-justify md:ml-2 ml-1
  }

  .markdown ul {
    @apply text-sm text-justify md:ml-2 ml-1
  }

  .markdown code {
    @apply text-[0.75rem] tracking-tighter bg-gray-100 mx-1 px-1 py-1 truncate
  }

  .markdown strong {
    @apply tracking-tight bg-blue-100 bg-opacity-25 font-medium rounded-sm
  }

  .markdown hr {
    @apply my-8
  }
}

